# tulun

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  manage.py  pyproject.toml
eval/: README.md
eval/flores/: eval_nllb_gemini.py  flores_utils.py  gatitos_utils.py  gemini_client.py  language_utils.py  translator.py
eval/tetun_bislama/: bislama.ipynb  gemini_aistudio.py  tetun.ipynb  translator_utils.py
translations/: admin.py  dspy_models.py  models.py  utils.py  views.py
translations/migrations/: 0001_initial.py  0002_rename_english_term_glossaryentry_english_key_and_more.py  0003_alter_glossaryentry_options_and_more.py  0004_remove_corpusentry_verified_corpusentry_created_at_and_more.py  0005_alter_corpusentry_options_and_more.py  0006_systemconfiguration.py  0007_systemconfiguration_post_editing_model.py  0008_systemconfiguration_translation_model.py  0009_systemconfiguration_num_sentences_retrieved_and_more.py  0010_rename_tetun_text_corpusentry_translated_text_and_more.py  0011_systemconfiguration_site_title.py  0012_systemconfiguration_target_language_code.py  0013_evalrow.py  0014_systemconfiguration_placeholder.py  0015_systemconfiguration_dspy_config.py  0016_alter_systemconfiguration_dspy_config.py  0017_alter_systemconfiguration_dspy_config_and_more.py  0018_alter_corpusentry_options_and_more.py  0019_alter_translation_created_by.py
translations/templates/translations/: add_modal.html  corpusentry_changelist.html  corpusentry_import_csv.html  (+4 more)
translations/templatetags/: config_tags.py
tulun/: asgi.py  settings.py  urls.py  wsgi.py
